--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css"> <!-- bootstrap.css-modelo de SAS CSSA (style.scss) - foi compilado com Koala -->
   <link rel="stylesheet" href="css/style.css">
+
   <title>Bootstrap Theme</title>
 </head>
 
@@ -405,37 +406,17 @@
     </div>
   </footer>
 
-
+   
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+  
+  <script src='./scripts.js'> </script> <!-- retorno meu arquivo java script-->
+ 
 
-  <script>
-    // Get the current year for the copyright -- função retornar ano atual para rodape.
-    $('#year').text(new Date().getFullYear());
-
-    // Init Scrollspy -- função que busco o ponto de inicio da tragetoria de um objeto navBar definido.
-    $('body').scrollspy({ target: '#main-nav' });
-
-    // Smooth Scrolling -- Função do Scroll menu bar rolagem suave nas informações.
-    $("#main-nav a").on('click', function (event) {
-      if (this.hash !== "") {
-        event.preventDefault();
-
-        const hash = this.hash;
-
-        $('html, body').animate({
-          scrollTop: $(hash).offset().top
-        }, 800, function () {
-
-          window.location.hash = hash;
-        });
-      }
-    });
-  </script>
 </body>
 
 </html>
